# InteractiveAndRobustMeshBooleans

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main-arap.cpp  main-inputcheck.cpp  main-rotation.cpp  main-stencil.cpp  main.cpp  rotate_mesh.py  test_booleans.py  test_manifold.py
arrangements/: LICENSE
arrangements/code/: aux_structure.cpp  aux_structure.h  common.h  custom_stack.h  debug.h  fast_trimesh.cpp  fast_trimesh.h  intersection_classification.cpp  intersection_classification.h  io_functions.cpp  io_functions.h  processing.cpp  processing.h  solve_intersections.cpp  solve_intersections.h  tree.h  triangle_soup.cpp  triangle_soup.h  triangulation.cpp  triangulation.h  utils.h
code/: booleans.cpp  booleans.h  foctree.cpp  foctree.h
data/: .gitignore  our_log.csv
test/: CMakeLists.txt  main.cpp
